--- a/.github/workflows/manual-build.yml
+++ b/.github/workflows/manual-build.yml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         include:
           - os: macos-latest
-          # - os: windows-latest
+          - os: windows-latest
     steps:
       - uses: actions/checkout@v4
         with:
