--- a/.github/workflows/manual-build.yml
+++ b/.github/workflows/manual-build.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - os: macos-latest
+          # - os: macos-latest
           - os: windows-latest
     steps:
       - uses: actions/checkout@v4
@@ -66,7 +66,7 @@ jobs:
         with:
           name: Buzz-${{ runner.os }}
           path: |
-            dist/Buzz*-mac.dmg
+            dist/Buzz*-windows.exe
 
   # build-snap:
   #   runs-on: ubuntu-latest
